# psml

./: .gitignore  Cargo.toml  LICENSE  PSML.md  README.md  README_PSML.md  ci.yml  release-plz.toml  release.yml  test.ps1o  test.psml  test_bash_raw.ps1o  test_zsh.ps1o  test_zsh_raw.ps1o
python_ref/: psml.py
src/: ir.rs  lib.rs  main.rs  parser.rs  preview.rs  sysprobe.rs  validate.rs
src/render/: bash.rs  cmd.rs  fish.rs  mod.rs  nu.rs  powershell.rs  util.rs  zsh.rs
tests/: integration.rs
